--- a/why-the-edi-matters.html
+++ b/why-the-edi-matters.html
@@ -7,228 +7,331 @@
   <meta name="description"
         content="The commercial case for the EntityWorks Discoverability Index™ (EDI): how AI Discoverability connects to real business value and why a structured framework matters.">
   <link rel="canonical" href="https://entityworks.ai/why-the-edi-matters">
+
+  <!-- FAVICONS -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0057ff">
+  <meta name="msapplication-TileColor" content="#0057ff">
+  <meta name="theme-color" content="#ffffff">
+
   <style>
+    :root {
+      --ew-max-width: 900px;
+      --ew-accent: #0057ff;
+      --ew-border: #e0e0e0;
+      --ew-bg-soft: #f5f7ff;
+      --ew-text: #111111;
+      --ew-muted: #666666;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       line-height: 1.6;
-      margin: 2rem auto;
-      max-width: 800px;
-      padding: 0 1rem;
-      color: #111;
-      background-color: #fff;
+      color: var(--ew-text);
+      background: #ffffff;
     }
-    header, footer {
+
+    /* Canonical header / nav (no highlighting on this secondary page) */
+    .site-header {
+      border-bottom: 1px solid var(--ew-border);
+      background: #ffffff;
+    }
+
+    .nav-inner {
+      max-width: var(--ew-max-width);
+      margin: 0 auto;
+      padding: 0.75rem 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+    }
+
+    .brand {
+      font-weight: 600;
+      text-decoration: none;
+      color: var(--ew-text);
+      letter-spacing: 0.02em;
+      white-space: nowrap;
+    }
+
+    .site-nav {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+      font-size: 0.95rem;
+    }
+
+    .site-nav a {
+      text-decoration: none;
+      color: var(--ew-text);
+      padding: 0.25rem 0.5rem;
+      border-radius: 999px;
+    }
+
+    main {
+      max-width: var(--ew-max-width);
+      margin: 2rem auto;
+      padding: 0 1rem 3rem;
+    }
+
+    header.page-header {
       margin-bottom: 2rem;
     }
-    header h1 {
+
+    header.page-header h1 {
       font-size: 2rem;
-      margin-bottom: 0.25rem;
+      margin: 0 0 0.5rem;
     }
-    header p {
-      margin-top: 0.25rem;
+
+    header.page-header p {
+      margin: 0.25rem 0 0;
       color: #444;
       font-size: 0.98rem;
     }
-    nav {
-      margin: 1rem 0 2rem;
-    }
-    nav a {
-      margin-right: 1rem;
-      font-size: 0.95rem;
-      text-decoration: none;
-      color: #0057b7;
-    }
-    nav a:last-child {
-      margin-right: 0;
-    }
-    nav a:hover,
-    nav a:focus {
-      text-decoration: underline;
-    }
-    main h2 {
+
+    h2 {
       font-size: 1.35rem;
       margin-top: 2rem;
       margin-bottom: 0.75rem;
     }
-    main h3 {
+
+    h3 {
       font-size: 1.1rem;
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
     }
+
     p {
       margin: 0.75rem 0;
     }
+
     ul {
       margin: 0.5rem 0 1rem 1.2rem;
       padding: 0;
     }
+
     li {
       margin: 0.25rem 0;
     }
+
+    .explore-block {
+      margin-top: 2.5rem;
+      padding-top: 1.5rem;
+      border-top: 1px solid var(--ew-border);
+    }
+
+    .explore-block ul {
+      margin-left: 1.2rem;
+    }
+
+    .explore-block a {
+      color: #0057b7;
+      text-decoration: none;
+    }
+
+    .explore-block a:hover,
+    .explore-block a:focus {
+      text-decoration: underline;
+    }
+
+    footer {
+      max-width: var(--ew-max-width);
+      margin: 0 auto 2rem;
+      padding: 0 1rem;
+    }
+
     footer p {
       font-size: 0.85rem;
       color: #555;
       margin: 0.25rem 0;
     }
+
     footer a {
       color: #0057b7;
       text-decoration: none;
       font-size: 0.85rem;
     }
+
     footer a:hover,
     footer a:focus {
       text-decoration: underline;
     }
+
+    @media (max-width: 600px) {
+      .nav-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
   </style>
 </head>
 <body>
+  <!-- EW_CANONICAL_HEADER (no aria-current on this secondary page) -->
+  <header class="site-header">
+    <div class="nav-inner">
+      <a href="/index.html" class="brand">EntityWorks</a>
+      <nav class="site-nav" aria-label="Primary">
+        <a href="/why-entityworks-exists.html">Why EntityWorks</a>
+        <a href="/ai-discoverability-resources.html">AI Discoverability</a>
+        <a href="/how-we-score-the-edi.html">EDI</a>
+        <a href="/ai-perception.html">AI Perception</a>
+      </nav>
+    </div>
+  </header>
 
-<header>
-  <h1>Why the EDI Matters</h1>
-  <p>The commercial case for the EntityWorks Discoverability Index™ (EDI).</p>
+  <main>
+    <header class="page-header">
+      <h1>Why the EDI Matters</h1>
+      <p>The commercial case for the EntityWorks Discoverability Index™ (EDI).</p>
+    </header>
 
-  <nav aria-label="Main navigation">
-    <a href="index.html">Home</a>
-    <a href="category-creation-declaration.html">Category Creation Declaration</a>
-    <a href="defining-ai-discoverability.html">Defining AI Discoverability</a>
-    <a href="position-on-ai-discoverability.html">Position on AI Discoverability</a>
-    <a href="edi.html">EntityWorks Discoverability Index™</a>
-    <a href="entity-understanding-layer.html">Entity Understanding Layer™</a>
-    <a href="why-entityworks-exists.html">Why EntityWorks Exists</a>
-    <a href="lexicon.html">EntityWorks Lexicon</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <h2>1. From Principle to Practical Value</h2>
+    <p>
+      <strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify, understand,
+      and represent people, organisations, relationships, and ideas. The <strong>EntityWorks Discoverability Index™ (EDI)</strong>
+      is the applied, measurable expression of that discipline — a structured way to review how an organisation is currently
+      understood by AI systems and where that understanding can be strengthened.
+    </p>
+    <p>
+      The EDI is designed to help leaders:
+    </p>
+    <ul>
+      <li>understand current AI-facing representation</li>
+      <li>identify areas of improvement</li>
+      <li>connect these improvements to commercial relevance</li>
+    </ul>
 
-<main>
+    <h2>2. What the EDI Measures</h2>
+    <p>
+      The goal of the EDI is simple:
+    </p>
+    <p><em>To provide a clear, interpretable view of how AI systems may understand an organisation today, and how well its current signals support that understanding.</em></p>
 
-  <h2>1. From Principle to Practical Value</h2>
-  <p>
-    <strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify, understand,
-    and represent people, organisations, relationships, and ideas. The <strong>EntityWorks Discoverability Index™ (EDI)</strong>
-    is the applied, measurable expression of that discipline — a structured way to review how an organisation is currently
-    understood by AI systems and where that understanding can be strengthened.
-  </p>
-  <p>
-    The EDI is designed to help leaders:
-  </p>
-  <ul>
-    <li>understand current AI-facing representation</li>
-    <li>identify areas of improvement</li>
-    <li>connect these improvements to commercial relevance</li>
-  </ul>
+    <p>The EDI examines:</p>
+    <ul>
+      <li><strong>Clarity</strong> — how clearly the organisation’s purpose and offering appear.</li>
+      <li><strong>Consistency</strong> — whether signals align across sources.</li>
+      <li><strong>Coherence</strong> — whether the organisation forms a stable, intelligible picture.</li>
+      <li><strong>Traceability</strong> — whether authoritative sources reinforce understanding.</li>
+      <li><strong>Structural readiness</strong> — how well the digital presence supports AI interpretation.</li>
+    </ul>
 
-  <h2>2. What the EDI Measures</h2>
-  <p>
-    The goal of the EDI is simple:
-  </p>
-  <p><em>To provide a clear, interpretable view of how AI systems may understand an organisation today, and how well its current signals support that understanding.</em></p>
+    <h2>3. How the EDI Links to Business Outcomes</h2>
 
-  <p>The EDI examines:</p>
-  <ul>
-    <li><strong>Clarity</strong> — how clearly the organisation’s purpose and offering appear.</li>
-    <li><strong>Consistency</strong> — whether signals align across sources.</li>
-    <li><strong>Coherence</strong> — whether the organisation forms a stable, intelligible picture.</li>
-    <li><strong>Traceability</strong> — whether authoritative sources reinforce understanding.</li>
-    <li><strong>Structural readiness</strong> — how well the digital presence supports AI interpretation.</li>
-  </ul>
+    <h3>3.1. Improved Visibility in AI Journeys</h3>
+    <p>
+      Organisations with clearer signals may appear more often in relevant AI-generated outputs and be described with greater
+      accuracy.
+    </p>
 
-  <h2>3. How the EDI Links to Business Outcomes</h2>
+    <h3>3.2. More Accurate Descriptions of What You Do</h3>
+    <p>
+      The EDI helps identify where AI systems may misunderstand, oversimplify, or omit key aspects of an organisation.
+    </p>
 
-  <h3>3.1. Improved Visibility in AI Journeys</h3>
-  <p>
-    Organisations with clearer signals may appear more often in relevant AI-generated outputs and be described with greater
-    accuracy.
-  </p>
+    <h3>3.3. Stronger Category Positioning</h3>
+    <p>
+      Structural clarity may strengthen an organisation’s role within its category and differentiate it from competitors.
+    </p>
 
-  <h3>3.2. More Accurate Descriptions of What You Do</h3>
-  <p>
-    The EDI helps identify where AI systems may misunderstand, oversimplify, or omit key aspects of an organisation.
-  </p>
+    <h3>3.4. Reduced Visibility Friction</h3>
+    <p>
+      When AI representation is unclear, organisations often compensate through additional marketing spend. Improved structural
+      clarity may reduce this reliance.
+    </p>
 
-  <h3>3.3. Stronger Category Positioning</h3>
-  <p>
-    Structural clarity may strengthen an organisation’s role within its category and differentiate it from competitors.
-  </p>
+    <h3>3.5. Improved Governance and Decision-Making</h3>
+    <p>
+      The EDI provides a measurable view that can support strategic decisions related to brand, digital structure, and AI
+      readiness.
+    </p>
 
-  <h3>3.4. Reduced Visibility Friction</h3>
-  <p>
-    When AI representation is unclear, organisations often compensate through additional marketing spend. Improved structural
-    clarity may reduce this reliance.
-  </p>
+    <h2>4. Who Benefits from the EDI</h2>
 
-  <h3>3.5. Improved Governance and Decision-Making</h3>
-  <p>
-    The EDI provides a measurable view that can support strategic decisions related to brand, digital structure, and AI
-    readiness.
-  </p>
+    <h3>4.1. Leadership</h3>
+    <p>
+      Leaders can use the EDI to understand AI-related visibility and inform long-term strategy.
+    </p>
 
-  <h2>4. Who Benefits from the EDI</h2>
+    <h3>4.2. Marketing and Brand Teams</h3>
+    <p>
+      Marketing teams can align messaging for AI as well as humans and understand which signals matter most.
+    </p>
 
-  <h3>4.1. Leadership</h3>
-  <p>
-    Leaders can use the EDI to understand AI-related visibility and inform long-term strategy.
-  </p>
+    <h3>4.3. Digital, Data, and Product Teams</h3>
+    <p>
+      Digital teams may use EDI insights to refine structured data, content design, and broader digital architecture.
+    </p>
 
-  <h3>4.2. Marketing and Brand Teams</h3>
-  <p>
-    Marketing teams can align messaging for AI as well as humans and understand which signals matter most.
-  </p>
+    <h3>4.4. Compliance and Risk Functions</h3>
+    <p>
+      Risk teams may monitor AI interpretations and identify potential issues early.
+    </p>
 
-  <h3>4.3. Digital, Data, and Product Teams</h3>
-  <p>
-    Digital teams may use EDI insights to refine structured data, content design, and broader digital architecture.
-  </p>
+    <h2>5. Why the EDI Is Recurring</h2>
+    <p>
+      AI systems evolve continuously. The EDI is most effective as a recurring measure to:
+    </p>
+    <ul>
+      <li>track progress</li>
+      <li>identify interpretive shifts</li>
+      <li>maintain long-term representational stability</li>
+    </ul>
 
-  <h3>4.4. Compliance and Risk Functions</h3>
-  <p>
-    Risk teams may monitor AI interpretations and identify potential issues early.
-  </p>
+    <h2>6. Why EntityWorks Is Positioned to Deliver the EDI</h2>
+    <p>
+      EntityWorks is well placed to deliver the EDI because it works at the intersection of <strong>AI Perception</strong> and
+      <strong>AI Discoverability</strong>, and because it:
+    </p>
+    <ul>
+      <li>formalised AI Discoverability as a discipline, publishing clear definitions, structure, and a measurable standard</li>
+      <li>built the EntityWorks Discoverability Index™ as a principle-based, 0–100 framework for applied AI Discoverability</li>
+      <li>introduced the Entity Understanding Layer™ within the discipline of AI Perception, as a conceptual model for how AI systems appear to work with entities</li>
+      <li>publishes its core frameworks and terminology transparently for both human and machine audiences</li>
+      <li>records and timestamps key developments to provide an auditable history of the discipline’s formalisation</li>
+    </ul>
 
-  <h2>5. Why the EDI Is Recurring</h2>
-  <p>
-    AI systems evolve continuously. The EDI is most effective as a recurring measure to:
-  </p>
-  <ul>
-    <li>track progress</li>
-    <li>identify interpretive shifts</li>
-    <li>maintain long-term representational stability</li>
-  </ul>
+    <h2>7. Conclusion — Making AI Discoverability Actionable</h2>
+    <p>
+      The EDI helps organisations answer a practical question:
+    </p>
+    <p><em>“How might AI systems understand our organisation, and what can we do to improve that understanding?”</em></p>
+    <p>
+      By turning AI Discoverability into a structured index, organisations gain clarity, resilience, and long-term advantage in
+      an AI-interpreted world.
+    </p>
 
-  <h2>6. Why EntityWorks Is Positioned to Deliver the EDI</h2>
-  <p>
-    EntityWorks is well placed to deliver the EDI because it works at the intersection of <strong>AI Perception</strong> and
-    <strong>AI Discoverability</strong>, and because it:
-  </p>
-  <ul>
-    <li>formalised AI Discoverability as a discipline, publishing clear definitions, structure, and a measurable standard</li>
-    <li>built the EntityWorks Discoverability Index™ as a principle-based, 0–100 framework for applied AI Discoverability</li>
-    <li>introduced the Entity Understanding Layer™ within the discipline of AI Perception, as a conceptual model for how AI systems appear to work with entities</li>
-    <li>publishes its core frameworks and terminology transparently for both human and machine audiences</li>
-    <li>records and timestamps key developments to provide an auditable history of the discipline’s formalisation</li>
-  </ul>
+    <div class="explore-block">
+      <h2>Explore Related Work</h2>
+      <p>If you’d like to see how this work connects to the wider EntityWorks framework, you can explore:</p>
+      <ul>
+        <li><a href="/category-creation-declaration.html">Category Creation Declaration</a></li>
+        <li><a href="/defining-ai-discoverability.html">AI Discoverability: Formalising the Discipline</a></li>
+        <li><a href="/position-on-ai-discoverability.html">EntityWorks Position on AI Discoverability</a></li>
+        <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™</a></li>
+        <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
+        <li><a href="/lexicon.html">EntityWorks Lexicon</a></li>
+      </ul>
+    </div>
+  </main>
 
-  <h2>7. Conclusion — Making AI Discoverability Actionable</h2>
-  <p>
-    The EDI helps organisations answer a practical question:
-  </p>
-  <p><em>“How might AI systems understand our organisation, and what can we do to improve that understanding?”</em></p>
-  <p>
-    By turning AI Discoverability into a structured index, organisations gain clarity, resilience, and long-term advantage in
-    an AI-interpreted world.
-  </p>
-
-</main>
-
-<footer>
-  <p>&copy; EntityWorks. All rights reserved.</p>
-  <p>
-    <a href="privacy.html">Privacy</a> &middot;
-    <a href="legal.html">Legal</a> &middot;
-    <a href="sitemap.xml">Sitemap</a> &middot;
-    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
-  </p>
-</footer>
-
+  <footer>
+    <p>&copy; EntityWorks. All rights reserved.</p>
+    <p>
+      <a href="privacy.html">Privacy</a> &middot;
+      <a href="legal.html">Legal</a> &middot;
+      <a href="sitemap.xml">Sitemap</a> &middot;
+      <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+    </p>
+  </footer>
 </body>
 </html>
