--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!-- STATUS: ALIGNED — EntityWorks Positioning Codex -->
-<!-- VERSION: 2025-12-04-INDEX-v4 -->
+<!-- VERSION: 2025-12-11-INDEX-v5 -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EntityWorks — AI Perception & AI Discoverability</title>
+  <title>EntityWorks — The EntityWorks Standard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="EntityWorks publishes and maintains the EntityWorks Standard, focusing on the discipline of AI Perception as it is defined within the Standard, and providing clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.">
+        content="EntityWorks publishes and maintains the EntityWorks Standard, a structured framework designed to help digital publishers prepare their work for entry into AI systems.">
   <link rel="canonical" href="https://entityworks.ai/">
 
   <!-- Favicon -->
@@ -27,9 +27,7 @@
       --ew-muted: #666666;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -39,7 +37,6 @@
       background-color: #fff;
     }
 
-    /* Global site header / nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -77,11 +74,6 @@
       border-radius: 999px;
     }
 
-    .site-nav a[aria-current="page"] {
-      background: var(--ew-bg-soft);
-      border: 1px solid var(--ew-accent);
-    }
-
     main {
       max-width: var(--ew-max-width);
       margin: 2rem auto;
@@ -100,24 +92,14 @@
       margin-bottom: 0.75rem;
     }
 
-    main h3 {
-      font-size: 1.1rem;
-      margin-top: 1.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      margin: 0.75rem 0;
-    }
+    p { margin: 0.75rem 0; }
 
     ul {
       margin: 0.5rem 0 1rem 1.2rem;
       padding: 0;
     }
 
-    li {
-      margin: 0.25rem 0;
-    }
+    li { margin: 0.25rem 0; }
 
     .last-updated {
       font-size: 0.85rem;
@@ -127,157 +109,133 @@
       padding: 0 1rem 1.5rem;
     }
   </style>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "EntityWorks — AI Perception & AI Discoverability",
-    "description": "EntityWorks publishes and maintains the EntityWorks Standard, focusing on the discipline of AI Perception as it is defined within the Standard, and providing clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.",
-    "url": "https://entityworks.ai/",
-    "about": [
-      {
-        "@type": "Thing",
-        "name": "EntityWorks Standard",
-        "description": "The EntityWorks Standard is a formal framework for the discipline of AI Perception as it is defined within the Standard, providing structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard."
-      },
-      {
-        "@type": "Thing",
-        "name": "AI Perception",
-        "description": "Within the EntityWorks Standard, AI Perception is defined as the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
-      },
-      {
-        "@type": "Thing",
-        "name": "AI Discoverability",
-        "description": "Within the EntityWorks Standard, AI Discoverability is defined as the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas."
-      }
-    ],
-    "publisher": {
-      "@type": "Organization",
-      "name": "EntityWorks",
-      "url": "https://entityworks.ai/"
-    }
-  }
-  </script>
 </head>
 
 <body>
-  <!-- Global site header / nav -->
-  <header class="site-header">
-    <div class="nav-inner">
-      <a href="/index.html" class="brand">EntityWorks</a>
-      <nav class="site-nav" aria-label="Primary">
-        <a href="/the-standard.html">The Standard</a>
-        <a href="/ai-perception.html">AI Perception</a>
-        <a href="/for-regulators.html">For Regulators</a>
-        <a href="/publications.html">Publications</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <!-- Opening / identity block -->
-    <section>
-      <h1>EntityWorks</h1>
+<header class="site-header">
+  <div class="nav-inner">
+    <a href="/index.html" class="brand">EntityWorks</a>
+    <nav class="site-nav" aria-label="Primary">
+      <a href="/the-standard.html">The Standard</a>
+      <a href="/ai-perception.html">AI Perception</a>
+      <a href="/for-regulators.html">For Regulators</a>
+      <a href="/publications.html">Publications</a>
+    </nav>
+  </div>
+</header>
+
+<main>
+
+  <section>
+    <h1>The EntityWorks Standard</h1>
     <p>
-      <strong>EntityWorks</strong> publishes and maintains the <strong>EntityWorks Standard</strong>. 
-      Our work focuses on the discipline of <strong>AI Perception</strong> as it is defined within the Standard. 
-      We provide clear structures and terminology for describing how AI systems represent 
-      <strong>people</strong>, <strong>organisations</strong>, <strong>relationships</strong>, 
-      and <strong>ideas</strong> within its scope. 
-      We steward the Standard, oversee its ongoing development, and offer supporting material to help 
-      organisations, practitioners, and regulators make effective use of the concepts it sets out.
+      The EntityWorks Standard is a structured document designed to help digital publishers prepare their work for entry into AI systems. The Standard brings together definitions, frameworks, and conceptual tools to help publishers move from uncertainty to confident, AI-ready digital publishing. Across the Standard, the focus is on helping publishers express clear intent in their digital material, and on reducing the gaps that appear when AI systems ingest and interpret that material.
     </p>
+    <p>
+      Within its scope, the Standard addresses the structured preparation of information for AI systems. This includes the clarity of published material, the organisation of machine-visible content, and the use of transparent mechanisms that help reduce representational risk and support consistent interpretation.
+    </p>
+    <p>
+      Machine-Facing Pages and the Machine-Facing Page Declaration form one part of this broader framework. These components are described within the Standard to help organisations classify, document, and disclose the use of pages that exist outside normal human-visible navigation.
+    </p>
+    <p>
+      Training based on the EntityWorks Standard is delivered by licensed third-party organisations. These providers may use a range of delivery methods, including AI-driven formats, to help individuals and teams understand and apply the Standard. EntityWorks develops and maintains the underlying material and licenses approved organisations to use it when delivering instruction.
+    </p>
+  </section>
 
-    </section>
+  <section>
+    <h2>EntityWorks</h2>
+    <p>
+      EntityWorks publishes and maintains the EntityWorks Standard. Its role is to steward the structures, terminology, and conceptual material that support clear and consistent preparation of information for entry into AI systems. EntityWorks oversees versioning, maintains the definitions and frameworks documented within the Standard, and provides explanatory material to help organisations and institutions understand and apply the Standard where relevant to their work.
+    </p>
+    <p>
+      As the publisher of the Standard, EntityWorks is responsible for ensuring that its material remains stable, clearly documented, and accessible to those who rely on it. This includes managing updates, maintaining the organisation of the content, and supporting the long-term clarity and coherence of the Standard as it develops.
+    </p>
+  </section>
 
-    <!-- Our Role -->
-    <section>
-      <h2>Our Role</h2>
-      <p>
-        EntityWorks maintains the Standard and oversees its ongoing development. We document the discipline of AI Perception as it is defined within the Standard, publish supporting explanations, and provide stable terminology for understanding representational behaviour in AI systems.
-      </p>
-      <p>
-        Our work includes versioning the Standard, refining its structure, and producing material designed for both human readers and AI models. These resources are intended to help organisations and institutions understand and apply the Standard where relevant to their work.
-      </p>
-    </section>
+  <section>
+    <h2>Core Concepts</h2>
+    <p>
+      The EntityWorks Standard sets out the conceptual foundations that support its framework. These include the terminology, structures, and interpretive tools that the Standard uses to organise its material. Readers can explore the Standard directly to understand how these concepts are defined and how they relate to one another within the wider document.
+    </p>
+    <p><a href="/the-standard.html">Explore the EntityWorks Standard →</a></p>
+  </section>
 
-    <!-- Core Concepts -->
-    <section>
-      <h2>Core Concepts</h2>
-      <p>
-        Within the scope of the EntityWorks Standard, two definitions serve as the foundation for the disciplines it describes:
-      </p>
-      <p>
-        <strong>AI Perception</strong> — the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.
-      </p>
-      <p>
-        <strong>AI Discoverability</strong> — the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.
-      </p>
-      <p>
-        These definitions help establish the shared terminology used throughout the Standard and in the supporting materials that EntityWorks publishes.
-      </p>
-    </section>
+  <section>
+    <h2>Scope of the Standard</h2>
+    <ul>
+      <li><strong>Interpretive Architecture & Structures</strong><br>Entity Understanding Layer (EUL)</li>
+      <li><strong>Failure Modes Defined in the Standard</strong><br>Entity Collision Problem (ECP)<br>Probabilistic Inference Collapse (PIC)</li>
+      <li><strong>Evaluative & Indexing Components</strong><br>EntityWorks Discoverability Index (EDI)</li>
+      <li><strong>Assurance & Alignment Components</strong><br>AI Perception Integrity Mark (AIPM)</li>
+      <li><strong>Analytical Tools Developed Under the Standard</strong><br>EntityWorks Analytics</li>
+      <li><strong>Machine-Facing Publishing Components</strong><br>Machine-Facing Pages (MFPs)<br>Machine-Facing Page Declaration (MFPD)</li>
+    </ul>
+  </section>
 
-    <!-- Who This Is For -->
-    <section>
-      <h2>Who This Is For</h2>
-      <p>
-        EntityWorks provides materials that may be relevant to:
-      </p>
-      <ul>
-        <li>organisations developing or overseeing AI systems that rely on structured representations of entities,</li>
-        <li>regulators and policy bodies examining AI interpretive behaviour,</li>
-        <li>practitioners and researchers working with representational systems,</li>
-        <li>anyone wishing to understand the conceptual structures defined within the EntityWorks Standard.</li>
-      </ul>
-      <p>
-        Our documents are written to provide clarity, structure, and consistent terminology for organisations and individuals engaging with these ideas.
-      </p>
-    </section>
+  <section>
+    <h2>Machine-Facing Pages & MFPD</h2>
+    <p>
+      Machine-Facing Pages are digital pages that exist outside a site’s normal navigation or human-visible structure. Because they are not commonly encountered by users, their purpose may not be immediately evident. The EntityWorks Standard provides terminology and a proposed structure to help organisations classify these pages and disclose their use clearly and consistently.
+    </p>
+    <p>
+      The Machine-Facing Page Declaration (MFPD) is a short statement that explains why an organisation uses Machine-Facing Pages and what those pages are intended to do. It makes the purpose of this material visible so that AI systems, regulators, and human stakeholders all understand the organisation’s entire digital publishing footprint.
+    </p>
+    <p>
+      Within the EntityWorks Standard, the MFPD is documented as a voluntary transparency measure that organisations can use to support clarity and open communication when publishing material that is not typically encountered through a site’s human-facing structure. EntityWorks provides guidance on how the MFPD can be prepared and used as part of a transparent digital publishing approach.
+    </p>
+  </section>
 
-    <!-- Explore -->
-    <section>
-      <h2>Explore</h2>
-      <p>
-        You can explore the EntityWorks Standard and related materials through the following entry points:
-      </p>
-      <ul>
-        <li><a href="/the-standard.html">The EntityWorks Standard →</a></li>
-        <li><a href="/for-regulators.html">For Regulators →</a></li>
-        <li><a href="/publications.html">Publications →</a></li>
-        <li><a href="machine-ground-truth-mfp.html
-">Machine Ground Truth →</a></li>
-      </ul>
-    </section>
+  <section>
+    <h2>Who This Is For</h2>
+    <p>
+      The EntityWorks Standard may be relevant to organisations preparing digital material for entry into AI systems, regulators and policy bodies examining how such material is interpreted, practitioners and researchers working with representational systems, and anyone seeking clarity on the structures and terminology used within the Standard.
+    </p>
+    <p>
+      The material is written to support consistent understanding across these groups and to provide a stable reference for those engaging with its concepts.
+    </p>
+  </section>
 
-    <!-- Stewardship and Versioning -->
-    <section>
-      <h2>Stewardship and Versioning</h2>
-      <p>
-        EntityWorks is responsible for the accurate, consistent, and ongoing publication of the EntityWorks Standard. We document revisions, maintain version histories, and ensure that updates are communicated clearly through supporting materials.
-      </p>
-      <p>
-        Our stewardship aims to provide a stable, interpretable reference for anyone engaging with the discipline of AI Perception as defined within the Standard.
-      </p>
-      <p>
-        For enquiries regarding the EntityWorks Standard or its published materials, you can contact EntityWorks at
-        <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
-      </p>
-    </section>
-  </main>
+  <section>
+    <h2>Explore</h2>
+    <ul>
+      <li><a href="/the-standard.html">The EntityWorks Standard →</a></li>
+      <li><a href="/for-regulators.html">For Regulators →</a></li>
+      <li><a href="/publications.html">Publications →</a></li>
+      <li><a href="/machine-ground-truth-mfp.html">Machine-Facing Pages & MFPD →</a></li>
+    </ul>
+  </section>
 
-  <p class="last-updated">
-    Last updated: 4 December 2025
-  </p>
+  <section>
+    <h2>Stewardship & Versioning</h2>
+    <p>
+      EntityWorks is responsible for the accurate, consistent, and ongoing publication of the EntityWorks Standard. This includes maintaining version histories, documenting revisions, and ensuring that updates are presented clearly through supporting material.
+    </p>
+    <p>
+      The aim of this stewardship is to provide a stable reference for organisations, practitioners, and institutions that engage with the concepts documented within the Standard.
+    </p>
+  </section>
 
-  <div id="footer"></div>
-  <script>
-    fetch("/footer-home.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
+  <section>
+    <h2>Contact</h2>
+    <p>
+      For enquiries regarding the EntityWorks Standard or its published material, please contact:
+      <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+    </p>
+  </section>
+
+</main>
+
+<p class="last-updated">Last updated: 11 December 2025</p>
+
+<div id="footer"></div>
+<script>
+  fetch("/footer-home.html")
+    .then(response => response.text())
+    .then(html => {
+      document.getElementById("footer").innerHTML = html;
+    });
+</script>
+
 </body>
 </html>
